<resources>
    <string name="app_name">4K Video Downloader &amp; Player</string>
    <string name="_4k_video_downloader_player"><b>4K</b> Video Downloader &amp; Player</string>
    <string name="this_action_might_contain_ads">This action might contain ads</string>
    <string name="allow_access">Allow Access</string>
    <string name="next">Next</string>
    <string name="allow_storage_access_to_read_and_write_files_on_your_device_enhancing_functionality_but_requiring_careful_consideration_for_privacy_and_security_it_enables_efficient_data_storage_and_retrieval_for_seamless_user_experiences">
    Unlock a better experience, grant access to your videos. This allows us to provide personalized results.\nYour privacy is always protected
</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_desc">This 4K Video Downloader and Player app is independently developed and is not affiliated with or endorsed by any other platforms or services. As a tool for downloading videos and saving content, users are responsible for ensuring that their use of downloaded materials does not infringe on copyrights or violate the rights of content owners. It is the user’s responsibility to obtain the necessary authorization from the copyright holders before using or sharing downloaded content.</string>
    <string name="this_4k_video_downloader_app_does_not_associate_own_or_licensed_with_any_social_media_sites_and_is_not_authorized_by_them_any_violations_of_intellectual_property_rights_and_unauthorized_actions_for_example_re_uploading_or_downloading_of_contents_are_the_sole_responsibility_of_the_user_alone_all_the_trademarks_such_as_logo_name_and_badges_are_completely_the_property_of_their_respective_owners">This 4K Video downloader app does not\n associate, own, or licensed with any social\n media sites and is not authorized by them.\n Any violations of intellectual property rights\n and unauthorized actions, for example, Re-\n uploading or downloading of contents are\n the sole responsibility of the user alone. All\n the trademarks such as logo, name, and\n badges are completely the property of their\n respective owners.</string>
    <string name="ok">OK</string>
    <string name="app_language">App language</string>
    <string name="english_united_states">English - United States</string>
    <string name="paste_url_here">Paste URL here</string>
    <string name="paste_link">Paste link</string>
    <string name="other_social_platforms">Other Social platforms</string>
    <string name="recent_downloads">Recent Downloads</string>
    <string name="settings">Settings</string>
    <string name="save_path">Save Path</string>
    <string name="storage_emulated_0_movies_4kvideodownloader_amp_player"><![CDATA[/storage/emulated/0/movies/4Kvideodownloader&player/]]></string>
    <string name="block_ads">Block Ads</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="downloads">Downloads</string>
    <string name="in_progress">In Progress</string>
    <string name="downloaded">Downloaded</string>
    <string name="search_for_downloads">Search for downloads</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="enjoy_brilliant_experience">Enjoy Brilliant Experience!</string>
    <string name="no_free_trial">(No Free Trial)</string>
    <string name="weekly">Weekly</string>
    <string name="rs_300_00_week">RS 300.00/Week</string>
    <string name="monthly">Monthly</string>
    <string name="rs_920_00_month">RS 920.00/Month</string>
    <string name="yearly">Yearly</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="you_can_cancel_subscription_anytime_from_google_playstore">You Can Cancel Subscription Anytime From Google Playstore</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy_1">Privacy Policy</string>
    <string name="download">Download</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="remove_ads_permanently">Remove Ads Permanently</string>
    <string name="apply">Apply</string>
    <string name="downloading">Downloading...</string>
    <string name="ad_is_loading">Loading Ads...</string>
    <string name="loading_advertisement">Loading Advertisement</string>
    <string name="privacy_policy_link" translatable="false">https://sites.google.com/view/privacypolicy4kvideodownloader/home</string>
    <string name="terms_of_use_link" translatable="false">https://sites.google.com/view/terms-services-4k-video-downlo/home</string>
    <string name="your_video_is_being_download_nplease_wait">Your video is being downloading\nPlease wait</string>
    <string name="loading_ad">Loading Ads</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="feedback_email" translatable="false">shahzaibm968@gmail.com</string>
    <string name="more_app_link" translatable="false">shahzaibm968@gmail.com</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_exit_this_app">Are you sure you want to Exit this app</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="please_rate_our_app">Please rate our app</string>
    <string name="video_downloaded_successfully">Video downloaded successfully</string>
    <string name="downloading_failed">Downloading Failed</string>
    <string name="please_enter_a_valid_url">Please enter a valid URL</string>
    <string name="youtube_is_legally_restricted">This URL is legally restricted</string>
    <string name="delete_video">Delete Video</string>
    <string name="are_you_sure_you_want_to_delete_this_video">Are you sure you want to delete this video?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="video_deleted">Video deleted</string>
    <string name="failed_to_delete_video">Failed to delete video</string>
    <string name="no_videos_available">No Videos Available</string>
    <string name="already_applied">Already applied</string>
    <string name="wait_video_is_downloading">Please wait while the video is downloading.</string>
    <string name="enjoy_premium_experience">Enjoy premium Experience!</string>
    <string name="no_ads">No ads.</string>
    <string name="faster_download_speed">Faster Download Speed.</string>
    <string name="unlimited_downloads">Unlimited downloads.</string>
    <string name="high_quality_downloads">high quality downloads.</string>
    <string name="no_free_trial_pro">(No Free Trial)</string>
    <string name="_6_months">6 Months</string>
    <string name="you_can_cancel_subscription">You can cancel subscription anytime from google playstore.</string>
    <string name="terms_of_uses"><u>Terms Of Use</u></string>
    <string name="privacy_policy_text"><u>Privacy Policy</u></string>
    <string name="cancel_dialog">Cancel download</string>
    <string name="already_purchased">Already Purchased!</string>
    <string name="you_already_have_access_to_the_premium">You already have access to the premium package! Enjoy all exculsive features and benefits available to you</string>
    <string name="video_size_is_too_large">Videos longer than 5 minutes are not allowed to download.</string>
    <string name="continue_with_ads">Continue With Ads</string>
    <string name="or">OR</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="go_to_home">Go to Home</string>
    <string name="two_ad_left">2 Ad Left</string>
    <string name="one_ad_left">1 Ad Left</string>
    <string name="popular_videos">Trending Videos</string>
    <string name="no_internet">No Internet</string>
    <string name="converter">Converter</string>
    <string name="all_videos">All Videos</string>
    <string name="mp3_converted">Mp3 Converted</string>
    <string name="mp3_converter_title">A Video to MP3 converter lets you extract and save audio from video files in MP3 format for easy playback.</string>
    <string name="add_video_convert">Add Video &amp; Convert</string>
    <string name="your_video_is_being_converted_to_mp3">Your Video is being Converted to Mp3.</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="audio_deleted">Audio deleted</string>
    <string name="audio_converted">Audio Converted Successfully</string>
    <string name="audio_converted_failed">Audio Converted Failed</string>
    <string name="audio_above_5_min">Video length above 5 min</string>
    <string name="audio_not_found">Video don\'t have audio</string>
    <string name="paste_your_copied_url">Paste your Copied URL</string>
    <string name="click_download_button">Click download button</string>
    <string name="play_downloaded_videos">Play downloaded Videos</string>
    <string name="built_in_player">Built-in Player</string>
    <string name="convert_videos_to_mp3">Convert Videos to MP3</string>
    <string name="how_to_use">How to use</string>
    <string name="select_video_from_gallery">Select video From gallery</string>
    <string name="after_conversion">After Conversion</string>
    <string name="month">Month</string>
    <string name="six_month">Six Month</string>
    <string name="prem_desc">No Free Trial. Your subscription will automatically renewed based on your selected plan. You can cancel it anytime from google play store.</string>
    <string name="unlimited_mp3_audio_conversions">Unlimited mp3 audio conversions</string>

</resources>