<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/downloading_bg">



    <TextView
        android:id="@+id/exit_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center"
        android:text="@string/already_purchased"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exit_details_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/exit_e_tv"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:text="@string/you_already_have_access_to_the_premium"
        android:textColor="#ffffff"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_tv" />




    <TextView
        android:id="@+id/exit_e_tv"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:background="@drawable/exit_btn_bg_drawable"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_2sdp"
        android:text="@string/ok"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:textColor="#D61414"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_details_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>