<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/downloading_bg">

    <TextView
        android:id="@+id/exit_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center_horizontal"
        android:text="@string/rate_us"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/exit_details_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center_horizontal"
        android:text="@string/please_rate_our_app"
        android:textColor="#ffffff"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_tv" />



    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:rating="2"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_details_tv"/>




    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:background="@drawable/drawable_cancel_btn"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_2sdp"
        android:text="@string/cancel"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:textColor="#ffffff"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exit_e_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <TextView
        android:id="@+id/exit_e_tv"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:background="@drawable/exit_btn_bg_drawable"
        android:fontFamily="@font/manropeextrabold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_2sdp"
        android:text="@string/rate_us"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:textColor="#D61414"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_tv"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

</androidx.constraintlayout.widget.ConstraintLayout>